--- a/src/app/styles/Header.scss
+++ b/src/app/styles/Header.scss
@@ -3,7 +3,7 @@
     display: flex;
     position: fixed;
     height: 7vh;
-    background-color: white;
+    background-color: transparent;
     z-index: 98;
     justify-content: flex-end;
     align-items: center;
