--- a/src/auth/styles/Login.scss
+++ b/src/auth/styles/Login.scss
@@ -1,42 +1,29 @@
 @import '../../index.scss';
 .Login{
-    display: grid;
-    place-items: center;
-    background-color: $azul;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     width: 100vw;
     height: 100vh;
+    background-image: url("../../assets/wave.png");
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    .logo{
+        width: 30rem;
+        position: absolute;
+        top: -10rem;
+    }
+    h1{
+        text-align: center;
+        color: $azul;
+        margin-bottom: 3rem;
+    }
     .box{
-        display: grid;
-        place-items: center;
-        margin: auto;
-        width: 40vw;
-        height: 60vh;
-        background-color: rgba(255, 255, 255, 0.336);
-        border-radius: 10px;
-        box-shadow: rgb(255 255 255 / 12%) 8px 11px 0px;
-        label{
-            font-size: 2.5rem;
-            color: white;
-            margin-left: 10%;
-        }
-        button,input{
-            height: 4rem;
-            background-color: white;
-            width: 80%;
-            margin: 2rem auto;
-            margin-left: 10%;
-            border-radius: 10px;
-            font-size: 2.5rem;
-            text-align: center;
-        }
-        button{
-            background-color: $azul ;
-            border: 1px solid rgba(255, 255, 255, 0.281);
-            color: white;
-            &:hover{
-                cursor: pointer;
-                background-color: rgba(22, 42, 156, 0.507);
-            }
-        }
+        margin-left: 10%;
+        border-radius: 1rem;
+        box-shadow: $sombra1;
+        padding: 6rem 2rem;
+        background-color: white;
     }
 }
