--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400;600;700&display=swap');
 
 @mixin for-phone-only {
   @media (max-width: 599px) {
@@ -16,33 +16,36 @@ $azul: #002f4f;
 $verde: #71e6a0;
 $negro: #121812;
 $gris: #7a7a76;
-$blanco: #f3eae8;
-
-* {
+$blanco: #f0f0f0;
+$sombra1:
+  rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,  
+  rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
   list-style: none;
-  text-decoration: none;
   border: none;
   outline: none;
+  text-decoration: none;
+  font-size: 62,5%;
+}
+
+body {
+  overflow: hidden;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 :root {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 62.5%;
   font-weight: 400;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-.Content{
-  display: grid;
-  justify-content: left;
-  padding-left: 2rem;
-  width: 75vw;
-  margin: auto;
-  min-height: 85vh;
-  z-index: 1;
-  margin-top: 10vh;
-  text-align: left;
 }
